--- a/MyApp/package.json
+++ b/MyApp/package.json
@@ -21,6 +21,7 @@
     "react-native": "0.66.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-static-safe-area-insets": "^2.1.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
     "redux-devtools-extension": "^2.13.9",
