--- a/application/package.json
+++ b/application/package.json
@@ -11,15 +11,19 @@
     "debug": "open 'rndebugger://set-debugger-loc?host=localhost&port=8081'"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-native-community/checkbox": "^0.5.9",
+    "@react-native-picker/picker": "^2.2.0",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@types/axios": "^0.14.0",
     "@types/react-redux": "^7.1.20",
     "@types/remote-redux-devtools": "^0.5.5",
     "axios": "^0.24.0",
+    "lodash": "^4.17.21",
     "react": "17.0.2",
     "react-native": "0.66.1",
+    "react-native-image-picker": "^4.1.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-static-safe-area-insets": "^2.1.1",
