--- a/application/package.json
+++ b/application/package.json
@@ -14,6 +14,7 @@
     "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-native-community/checkbox": "^0.5.9",
     "@react-native-picker/picker": "^2.2.0",
+    "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@types/axios": "^0.14.0",
