--- a/application/package.json
+++ b/application/package.json
@@ -18,6 +18,7 @@
     "@react-navigation/native": "^6.0.6",
     "@react-navigation/native-stack": "^6.2.5",
     "@types/axios": "^0.14.0",
+    "@types/react-native-snap-carousel": "^3.8.5",
     "@types/react-redux": "^7.1.20",
     "@types/remote-redux-devtools": "^0.5.5",
     "axios": "^0.24.0",
@@ -27,6 +28,7 @@
     "react-native-image-picker": "^4.1.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
+    "react-native-snap-carousel": "^3.9.1",
     "react-native-static-safe-area-insets": "^2.1.1",
     "react-redux": "^7.2.6",
     "redux": "^4.1.2",
