--- a/application/package.json
+++ b/application/package.json
@@ -23,6 +23,7 @@
     "@types/remote-redux-devtools": "^0.5.5",
     "axios": "^0.24.0",
     "lodash": "^4.17.21",
+    "prettier": "^2.5.1",
     "react": "17.0.2",
     "react-native": "0.66.1",
     "react-native-image-picker": "^4.1.2",
