--- a/application/package.json
+++ b/application/package.json
@@ -26,6 +26,7 @@
     "prettier": "^2.5.1",
     "react": "17.0.2",
     "react-native": "0.66.1",
+    "react-native-date-picker": "^4.1.3",
     "react-native-image-picker": "^4.1.2",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
