--- a/application/package.json
+++ b/application/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-native-community/checkbox": "^0.5.9",
+    "@react-native-community/clipboard": "^1.5.1",
     "@react-native-picker/picker": "^2.2.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
