--- a/application/package.json
+++ b/application/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "myapp",
+  "name": "inpirplat",
   "version": "0.0.1",
   "private": true,
   "scripts": {
@@ -14,6 +14,9 @@
     "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-native-community/checkbox": "^0.5.9",
     "@react-native-community/clipboard": "^1.5.1",
+    "@react-native-firebase/app": "^14.11.0",
+    "@react-native-firebase/crashlytics": "^14.11.0",
+    "@react-native-firebase/messaging": "^14.11.0",
     "@react-native-picker/picker": "^2.2.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
@@ -30,6 +33,7 @@
     "react-native-date-picker": "^4.1.3",
     "react-native-flipper": "^0.145.0",
     "react-native-image-picker": "^4.1.2",
+    "react-native-push-notification": "^8.1.1",
     "react-native-safe-area-context": "^3.3.2",
     "react-native-screens": "^3.9.0",
     "react-native-snap-carousel": "^3.9.1",
