--- a/application/android/build.gradle
+++ b/application/android/build.gradle
@@ -7,7 +7,7 @@ buildscript {
         compileSdkVersion = 29
         targetSdkVersion = 29
         ndkVersion = "20.1.5948944"
-        firebaseMessagingVersion = '21.1.0'
+        // firebaseMessagingVersion = '21.1.0'
     }
     repositories {
         google()
@@ -16,6 +16,8 @@ buildscript {
     dependencies {
         classpath("com.android.tools.build:gradle:4.2.2")
         classpath 'com.google.gms:google-services:4.3.10'
+        classpath 'com.google.code.gson:gson:2.8.6'
+        classpath 'com.google.firebase:firebase-crashlytics-gradle:2.9.0'
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
     }
