--- a/application/package.json
+++ b/application/package.json
@@ -14,9 +14,9 @@
     "@react-native-async-storage/async-storage": "^1.15.11",
     "@react-native-community/checkbox": "^0.5.9",
     "@react-native-community/clipboard": "^1.5.1",
-    "@react-native-firebase/app": "^14.11.0",
-    "@react-native-firebase/crashlytics": "^14.11.0",
-    "@react-native-firebase/messaging": "^14.11.0",
+    "@react-native-firebase/app": "12.4.0",
+    "@react-native-firebase/crashlytics": "12.4.0",
+    "@react-native-firebase/messaging": "12.4.0",
     "@react-native-picker/picker": "^2.2.0",
     "@react-navigation/bottom-tabs": "^6.0.9",
     "@react-navigation/native": "^6.0.6",
